manifests/backend-deployment.yaml
---
# Source: my-app/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-backend
  namespace: training
  labels:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/instance: my-app-backend
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: my-app
    app.kubernetes.io/managed-by: helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      component: backend
  template:
    metadata:
      labels:
        app: my-app
        component: backend
    spec:
      containers:
        - name: my-app-backend
          image: "<ECR REPO>:backend"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
            name: http-backend
---
# Source: my-app/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-backend
  namespace: training
  labels:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/instance: my-app-backend
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: my-app
    app.kubernetes.io/managed-by: helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http-backend
  selector:
    app: my-app
    component: backend

---
# Source: my-app/templates/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-backend
  namespace: training
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/acme-dns01-provider: cloudflare
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "backend.exampledomain.com"
    secretName: my-app-backend-tls
  rules:
  - host: "backend.exampledomain.com"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-app-backend
            port:
              number: 80
