manifests/frontend-deployment.yaml
---
# Source: my-app/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-frontend
  namespace: training
  labels:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/instance: my-app-frontend
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: my-app
    app.kubernetes.io/managed-by: helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      component: frontend
  template:
    metadata:
      labels:
        app: my-app
        component: frontend
    spec:
      containers:
      - name: my-app-frontend
        image: "992382560483.dkr.ecr.us-east-1.amazonaws.com/trainings:frontend"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http-frontend

---
# Source: my-app/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-frontend
  namespace: training
  labels:
    app.kubernetes.io/name: my-app
    app.kubernetes.io/instance: my-app-frontend
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: my-app
    app.kubernetes.io/managed-by: helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http-frontend
  selector:
    app: my-app
    component: frontend

---
# Source: my-app/templates/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-frontend
  namespace: training
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/acme-dns01-provider: cloudflare
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "staging.grandnerds.com"
    secretName: my-app-frontend-tls
  rules:
  - host: "staging.grandnerds.com"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: my-app-frontend
            port:
              number: 80
